--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>LocalCounterSPA</title>
+		<title>Team Counter Simple SPA</title>
 
 		<style>
 			body { font-family: Arial, sans-serif; }
