Enhance documentation and name

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
 		</script>
 	</head>
 	<body>
-		<h1>Local Counter SPA (no server connection)</h1>
+		<h1>Team Counter Simple SPA</h1>
 		<div id="appContainer"></div>
 	</body>
 </html>
